<resources>
    <string name="app_name">Next Wallet</string>
    <string name="welcome_next_wallet">Bem-vindo ao Next Wallet</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="remember_access">Lembrar acesso</string>
    <string name="enter">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="show_or_hide_password">Mostrar ou ocultar senha</string>
    <string name="signup_title">Seu cartão. Seu controle. Em um só lugar.</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="signup">Cadastre-se</string>
...
